--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
             <h1 id="logo-text">Toboolist</h1>
         </header>
         <main>
-
+            <section id="tasti">
+                <button id="tasto-task">Add Task</button>
+                <button id="tasto-section">Add Section</button>
+            </section>
         </main>
     </body>
 </html>
