--- a/index.html
+++ b/index.html
@@ -17,6 +17,27 @@
                 <button id="tasto-task">Add Task</button>
                 <button id="tasto-section">Add Section</button>
             </section>
+
+            <section id="elenchi">
+                <details>
+                    <summary class="inizio-elenco">New Task</summary>
+                    <p><span class="spunta">&#x2713;</span> Quarterly Newsletter <span class="edit">Editorial</span></p>
+                </details>
+                <details>
+                    <summary class="inizio-elenco">Today</summary>
+                    <p><span class="spunta">&#x2713;</span> Recruiting blog post <span class="edit">Editorial</span></p>
+                    <p><span class="spunta">&#x2713;</span> Mobile app launch <span class="q1">Q1 Goals</span></p>
+                    <p><span class="ics">&#215;</span> Interview John H. <span class="recru">Recruiting</span></p>
+                    <p><span class="spunta">&#x2713;</span> Summit update to mobile storefront <span class="mobile">Mobile</span></p>
+                </details>
+                <details>
+                    <summary class="inizio-elenco">Upcoming</summary>
+                    <p><span class="ics">&#215;</span> Schedule meeting with Alex</p>
+                    <p><span class="spunta">&#x2713;</span> Homepage refresh <span class="web">Website</span></p>
+                    <p><span class="spunta">&#x2713;</span> Onboard new Sales team members <span class="sales">Sales</span></p>
+                    <p><span class="spunta">&#x2713;</span> Review editorial calendar <span class="edit">Editorial</span></p>
+                </details>
+            </section>
         </main>
     </body>
 </html>
